--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
