--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.10.0",
+    "mongodb-extended-json": "^1.11.1",
+    "mongoose": "^8.8.1",
     "next": "14.2.15",
     "next-auth": "^4.24.5",
     "react": "^18",
