--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
